src/objects/Offering__c.object
<CustomObject>
    <description>The Offering object captures unique sales information related to the platform. This will allow MicroStrategy to manage adds, changes, deletes to its platform offering and how they can be bundled in an opportunity.</description>
    <fields>
        <fullName>AccessScenario__c</fullName>
        <description>This field indicates the type of access being purchased</description>
        <inlineHelpText>This field indicates the type of access being purchased</inlineHelpText>
        <label>Access Scenario</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Physical Access</fullName>
                </value>
                <value>
                    <fullName>Logical Access</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Neither</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AnyCloud__c</fullName>
        <description>Tracking 3rd party MSTR Cloud Opportunities</description>
        <inlineHelpText>Select the type of Cloud vendor for the Opportunity.</inlineHelpText>
        <label>AnyCloud</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>KDDI</fullName>
                </value>
                <value>
                    <fullName>RackSpace</fullName>
                </value>
                <value>
                    <fullName>T-Systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AverageAnnualValue__c</fullName>
        <description>The AAV of a contract represents its Total Committed Revenue (excluding Setup Fees), divided by the contract term, times 12 months.</description>
        <formula>IF( Term__c &gt; 12, ( TotalCommittedRevenue__c / Term__c ) * 12, TotalCommittedRevenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The AAV of a contract represents its Total Committed Revenue (excluding Setup Fees), divided by the contract term, times 12 months.</inlineHelpText>
        <label>Average Annual Value (AAV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractExpirationDate__c</fullName>
        <description>( Term__c * 30) + Start_Date__c</description>
        <inlineHelpText>This indicates the expiration of the contract based on Start Date + [Term (in months) x 30]</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DataCenter__c</fullName>
        <description>The Data Center where the environment is most likely to be hosted</description>
        <inlineHelpText>Please enter the Data Center where the environment is most likely to be hosted</inlineHelpText>
        <label>Data Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ashburn</fullName>
                </value>
                <value>
                    <fullName>AWS Beijing</fullName>
                </value>
                <value>
                    <fullName>AWS Ireland</fullName>
                </value>
                <value>
                    <fullName>AWS Northern CA</fullName>
                </value>
                <value>
                    <fullName>AWS Northern VA</fullName>
                </value>
                <value>
                    <fullName>AWS Oregon</fullName>
                </value>
                <value>
                    <fullName>AWS Sao Paolo</fullName>
                </value>
                <value>
                    <fullName>AWS Singapore</fullName>
                </value>
                <value>
                    <fullName>AWS Sydney</fullName>
                </value>
                <value>
                    <fullName>AWS Tokyo</fullName>
                </value>
                <value>
                    <fullName>Fast &amp; Furious</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataIntegrationOption__c</fullName>
        <description>This is the type of data integration that would best meet the customer requirements.</description>
        <inlineHelpText>This is the type of data integration that would best meet the customer requirements.</inlineHelpText>
        <label>Data Integration Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Provided</fullName>
                </value>
                <value>
                    <fullName>Cloud Basic</fullName>
                </value>
                <value>
                    <fullName>Cloud Standard</fullName>
                </value>
                <value>
                    <fullName>Power Center Advanced Edition</fullName>
                </value>
                <value>
                    <fullName>Power Center Standard Edition</fullName>
                </value>
                <value>
                    <fullName>Power Center Real-Time Edition</fullName>
                </value>
                <value>
                    <fullName>SSIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Hosting_Terabytes__c</fullName>
        <description>Enter the number of Terabytes the customer has indicated will be needed as part of their data hosting option.</description>
        <inlineHelpText>Enter the number of Terabytes the customer has indicated will be needed as part of their data hosting option.</inlineHelpText>
        <label>Data Hosting Terabytes</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Hosting__c</fullName>
        <description>Check this option if the customer has indicated that they will want to host their data warehouse on the MicroStrategy Cloud.</description>
        <inlineHelpText>Check this option if the customer has indicated that they will want to host their data warehouse on the MicroStrategy Cloud.</inlineHelpText>
        <label>Data Hosting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Database_Option__c</fullName>
        <description>This is the Data Hosting Tier for the Opportunity.</description>
        <inlineHelpText>This is the Data Hosting Tier for the Opportunity.</inlineHelpText>
        <label>Data Hosting Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Netezza</fullName>
                </value>
                <value>
                    <fullName>ParAccel</fullName>
                </value>
                <value>
                    <fullName>SQL Server Enterprise</fullName>
                </value>
                <value>
                    <fullName>SQL Server Standard</fullName>
                </value>
                <value>
                    <fullName>Teradata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ETLAdditionalConnectors__c</fullName>
        <description>Additional Connectors that will be required to support the ETL process.</description>
        <inlineHelpText>Additional Connectors that will be required to support the ETL process.</inlineHelpText>
        <label>Data Integration Connectors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Envoy__c</fullName>
        <description>This field indicates the name of the registered envoy partner involved in the sales process</description>
        <inlineHelpText>This field indicates the name of the registered envoy partner involved in the sales process</inlineHelpText>
        <label>Envoy Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adam Gold</fullName>
                </value>
                <value>
                    <fullName>Ali Arbel</fullName>
                </value>
                <value>
                    <fullName>Amin Salam</fullName>
                </value>
                <value>
                    <fullName>Amir Benesh</fullName>
                </value>
                <value>
                    <fullName>Andrew Stranberg</fullName>
                </value>
                <value>
                    <fullName>Bill Burlew</fullName>
                </value>
                <value>
                    <fullName>Jimmy Lynn</fullName>
                </value>
                <value>
                    <fullName>John Doub</fullName>
                </value>
                <value>
                    <fullName>Joshua Siegel</fullName>
                </value>
                <value>
                    <fullName>Patrick Gorman</fullName>
                </value>
                <value>
                    <fullName>Peter O&apos;Toole</fullName>
                </value>
                <value>
                    <fullName>Richard Goodstein</fullName>
                </value>
                <value>
                    <fullName>Sahle Ghebreysesus</fullName>
                </value>
                <value>
                    <fullName>Saud Alfaisal</fullName>
                </value>
                <value>
                    <fullName>Shad Azimi</fullName>
                </value>
                <value>
                    <fullName>Steve Carey</fullName>
                </value>
                <value>
                    <fullName>Tamara Skadrak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Amount__c</fullName>
        <description>The estimated value of the opportunity. This field rolls up to the Amount field on the Opportunity.</description>
        <inlineHelpText>The estimated value of the opportunity. This field rolls up to the Amount field on the Opportunity</inlineHelpText>
        <label>Forecasted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <description>Please identify the MicroStrategy executive sponsor working on the opportunity</description>
        <inlineHelpText>Please identify the MicroStrategy executive sponsor working on the opportunity</inlineHelpText>
        <label>Executive Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amar Duggal</fullName>
                </value>
                <value>
                    <fullName>Catherine Reynolds</fullName>
                </value>
                <value>
                    <fullName>Charles Veley</fullName>
                </value>
                <value>
                    <fullName>Kirsten Brown</fullName>
                </value>
                <value>
                    <fullName>Matt Gorman</fullName>
                </value>
                <value>
                    <fullName>Michael Saylor</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstYearRevenue__c</fullName>
        <description>Determined by license type. Perpetual licenses = TCV. Subscription licenses = MRR * 12.</description>
        <inlineHelpText>For Cloud Sales Director use</inlineHelpText>
        <label>First Year Revenue (FYR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IaaS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the customer is purchasing an Infrastructure-as-a-Service box. Please contact the Cloud team for specific sizing and pricing information.</description>
        <inlineHelpText>Check if the customer is purchasing an Infrastructure-as-a-Service box. Please contact the Cloud team for specific sizing and pricing information.</inlineHelpText>
        <label>IaaS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <description>The license type indicates whether this is a perpetual or subscription license.</description>
        <inlineHelpText>The license type indicates whether this is a perpetual or subscription license.</inlineHelpText>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Term (On-Premise)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoyaltyProgram__c</fullName>
        <description>Indicates customer&apos;s status regarding use of a Loyalty Program for their business.</description>
        <inlineHelpText>Indicates customer&apos;s status regarding use of a Loyalty Program for their business.</inlineHelpText>
        <label>Loyalty Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MobileApplicationAvailableon__c</fullName>
        <description>Select lead&apos;s applicable Mobile App Operating System.</description>
        <inlineHelpText>Select lead&apos;s applicable Mobile App Operating System.</inlineHelpText>
        <label>Mobile Application Available on:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>iOS</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Blackberry</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MobileOptimizedECommerceWebsite__c</fullName>
        <description>This field indicates whether or not customer uses a mobile website in addition to a standard website.</description>
        <inlineHelpText>Indicate whether or not customer uses a mobile website in addition to a standard website.</inlineHelpText>
        <label>Mobile Optimized E-Commerce Website</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Revenue_MRR__c</fullName>
        <description>This is the monthly recurring revenue (MRR).</description>
        <inlineHelpText>This is the monthly recurring revenue (MRR).</inlineHelpText>
        <label>Monthly Recurring Revenue (MRR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nodes__c</fullName>
        <description>This field indicates the number of nodes for the customer&apos;s BI environment. Typically, this number is two.</description>
        <inlineHelpText>Select the number of nodes for the customer&apos;s BI environment. Typically, this number is two.</inlineHelpText>
        <label>Nodes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Additional Information</description>
        <inlineHelpText>Additional Information</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Offering has child relationship in Master-Detail relationship.</description>
        <inlineHelpText>Offering has child relationship in Master-Detail relationship.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Offerings</relationshipLabel>
        <relationshipName>Offerings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pilot_Proposal__c</fullName>
        <description>This field indicates whether this deal includes a pilot proposal</description>
        <inlineHelpText>This field indicates whether this deal includes a pilot proposal</inlineHelpText>
        <label>Pilot Proposal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerCenterEnterpriseSize__c</fullName>
        <description>This is the size of the Power Center Enterprise Server.</description>
        <inlineHelpText>This is the size of the Power Center Enterprise Server.</inlineHelpText>
        <label>Power Center Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2 Core</fullName>
                </value>
                <value>
                    <fullName>4 Core</fullName>
                </value>
                <value>
                    <fullName>8 Core</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProvisionItems__c</fullName>
        <description>Mark if Sales has requested items be provisioned in advance of a contract.</description>
        <inlineHelpText>Mark if Sales has requested items be provisioned in advance of a contract.</inlineHelpText>
        <label>Provision Items</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Amount__c</fullName>
        <description>This is the amount that is pulled in from the final quote.</description>
        <inlineHelpText>This is the amount that is pulled in from the final quote.</inlineHelpText>
        <label>Quote Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RenewalQuote__c</fullName>
        <description>Quote System ID for the quote used to renew an existing environment.</description>
        <inlineHelpText>If a &quot;Closed-Won&quot; opportunity has been renewed, please enter the Quote number used in the renewal here. This will prevent the opportunity from displaying as part of the &quot;Upcoming Renewals&quot; report.</inlineHelpText>
        <label>Renewal Quote</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SSO_via_SAML_2_0__c</fullName>
        <description>Based on total user count, including End Users and Dev Users that would use SSO.</description>
        <inlineHelpText>Please size based on the total user count, including End Users and Dev Users.</inlineHelpText>
        <label>SSO via SAML 2.0</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Up to 55 Users</fullName>
                </value>
                <value>
                    <fullName>Up to 130 Users</fullName>
                </value>
                <value>
                    <fullName>Unlimited Users</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Setup_Fees__c</fullName>
        <description>Please indicate the set-up fees associated with the deal</description>
        <inlineHelpText>Please indicate the set-up fees associated with the deal</inlineHelpText>
        <label>Setup Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>This is the first day that the services go into effect in the contract.</description>
        <inlineHelpText>This is the first day that the services go into effect in the contract.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Tier__c</fullName>
        <description>Cloud Support options for the customer.</description>
        <inlineHelpText>Please select which Support Tier the customer would like.</inlineHelpText>
        <label>Cloud Support Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Standard + Extended</fullName>
                </value>
                <value>
                    <fullName>Plus</fullName>
                </value>
                <value>
                    <fullName>Plus + Extended</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>Length (in months) of the contract term</description>
        <inlineHelpText>Length (in months) of the contract term</inlineHelpText>
        <label>Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalCommittedRevenue__c</fullName>
        <description>Calculated by TCV - Setup Fees</description>
        <formula>TotalContactValue__c -  Setup_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Committed Revenue (TCR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalContactValue__c</fullName>
        <description>Calculated based on license type.</description>
        <inlineHelpText>Total Contract Value = Estimated Amount for Perpetual License
Total Contract Value = MRR * Term for Subscription License</inlineHelpText>
        <label>Total Contract Value (TCV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_BI_Nodes__c</fullName>
        <description>This field indicates the number of nodes for the customer&apos;s BI environment. Typically, this number is two.</description>
        <inlineHelpText>Select the number of nodes for the customer&apos;s BI environment. Typically, this number is two.</inlineHelpText>
        <label>Total BI Nodes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Incentive__c</fullName>
        <description>Used to adjust TCR and TCV fields to account for any changes in MRR over the life of the contract. Ex: 5 months at $5k/month, followed by 31 months at $15k/month.</description>
        <inlineHelpText>List the dollar value of any one time incentive to encourage the customer to make complete the deal (e.g.: a discount that only applies to the initial term)</inlineHelpText>
        <label>Transaction Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>USTCurrentStatus__c</fullName>
        <description>What is the current overall status of the UST engagement aspect of this opportunity?</description>
        <inlineHelpText>What is the current overall status of the UST engagement aspect of this opportunity?</inlineHelpText>
        <label>UST Current Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USTEscalation__c</fullName>
        <label>UST Escalation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USTHistory__c</fullName>
        <description>Provide details on the UST engagement from the starting point to current time</description>
        <inlineHelpText>Provide details on the UST engagement from the starting point to current time</inlineHelpText>
        <label>UST History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USTNextSteps__c</fullName>
        <description>What are the upcoming action items for this UST engagement?</description>
        <inlineHelpText>What are the upcoming action items for this UST engagement?</inlineHelpText>
        <label>UST Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USTPhase__c</fullName>
        <description>What phase of the engagement is this UST project currently in?</description>
        <inlineHelpText>What phase of the engagement is this UST project currently in?</inlineHelpText>
        <label>UST Phase</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>USTPriority__c</fullName>
        <description>List the relative priority (High, Medium, Low) of the overall UST engagement</description>
        <inlineHelpText>List the relative priority (High, Medium, Low) of the overall UST engagement</inlineHelpText>
        <label>UST Priority</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>USTResources__c</fullName>
        <description>Select the resource(s) from the UST that will be participating in the engagement</description>
        <inlineHelpText>Select the resource(s) from the UST that will be participating in the engagement</inlineHelpText>
        <label>UST Resources</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alex Charlet</fullName>
                </value>
                <value>
                    <fullName>Matt Danyeur</fullName>
                </value>
                <value>
                    <fullName>Lee Harrington</fullName>
                </value>
                <value>
                    <fullName>Vince Mastromarco</fullName>
                </value>
                <value>
                    <fullName>Dan Morris</fullName>
                </value>
                <value>
                    <fullName>Grant Szabo</fullName>
                </value>
                <value>
                    <fullName>Albert Tsai</fullName>
                </value>
                <value>
                    <fullName>Onur Uran</fullName>
                </value>
                <value>
                    <fullName>Kurt Yang</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USTUseCase__c</fullName>
        <description>What is the customer use case related to this specific UST engagement?</description>
        <inlineHelpText>What is the customer use case related to this specific UST engagement?</inlineHelpText>
        <label>UST Use Case</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCommerceVendor__c</fullName>
        <description>This field is to capture eCommerce vendor Customer is using if applicable</description>
        <inlineHelpText>This field is to capture eCommerce vendor Customer is using if applicable</inlineHelpText>
        <label>eCommerce Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>ATG (Oracle)</fullName>
                </value>
                <value>
                    <fullName>Hybris (SAP)</fullName>
                </value>
                <value>
                    <fullName>IBM WCS (WebSphere Commerce)</fullName>
                </value>
                <value>
                    <fullName>Demandware</fullName>
                </value>
                <value>
                    <fullName>Magento</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Offering</label>
    <nameField>
        <displayFormat>OF{00000000}</displayFormat>
        <label>Offering Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offerings</pluralLabel>
    <recordTypes>
        <fullName>Analytics</fullName>
        <active>true</active>
        <description>This record type is for the BI platform</description>
        <label>Analytics</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cloud_Add_On</fullName>
        <active>true</active>
        <description>This record type is for the additional Cloud services</description>
        <label>Cloud Add-On</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consulting_Services</fullName>
        <active>true</active>
        <description>This record type is for Consulting services</description>
        <label>Consulting Services</label>
    </recordTypes>
</CustomObject>